--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
      <meta name="renderer" content="webkit"> 
      <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
     <title></title>
-    <style>
-      
-    </style>
+    <link type="text/css" href="./main.css" rel="stylesheet" media="all" />
   </head>
   <body>
     <script>
