--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div id="app"></div>
 
     <script src="http://localhost:8080/webpack-dev-server.js"></script>
-    <script src="./example.build.js"></script>
+    <script src="/example.build.js"></script>
 
   </body>
 </html>
